tests/paczka1/fuzzy1/40287887.err
Error in line 18: 4E9VgNhKU A386 0,6
Error in line 24: R2rzBOzRN3 S47 188,2
Error in line 1: WtCHsA A386 40,1
